# TasteOS

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API_CONTRACTS.md  BILLING_IMPLEMENTATION_COMPLETE.md  COPILOT_README.md  GETTING_STARTED.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_TEST_COMPLETE.md  QUICK_TEST.md  README.md  SETUP_COMPLETE.md  V13_3_COMPLETION_NOTES.md  V15_2_1_COMPLETION_NOTES.md  V15_2_2_IMPLEMENTATION_PLAN.md  V3_2_2_COMPLETION_NOTES.md  VARIANT_GENERATION_COMPLETE.md  WORKFLOW.md  check_app.py  package.json  pnpm-lock.yaml  pytest.ini  setup-api.ps1  turbo.json
apps/api/: .coverage  .env.example  alembic.ini  check_db.py  package.json  pyproject.toml  pytest.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5d233a52b7e7_phase_5_2_household_invites.py  6a0a7c5c8f6b_phase_5_1_nutrition_profiles_and_.py  9cfae00d59c4_phase_4_add_households_and_recipe_memory.py
apps/api/docs/: PHASE_5_2_COMPLETE.md
apps/api/scripts/: README.md  add_stripe_customer_id.py  add_subscription_status.py  check_auth_module.py  check_users_table.py  create_test_household.py  init_db.py  login.ps1  recreate_db.py  register_payload.json  register_user.py  test_api.ps1  test_api.sh  test_billing.ps1  test_households_mine.py  test_login.py  test_register.py  test_register_direct.py  test_variant.ps1  variant-quickstart.ps1
apps/api/tasteos_api/: __init__.py  main.py
apps/api/tasteos_api/agents/: __init__.py  nutrition_analyzer.py  pantry_agent.py  planner_agent.py  recipe_importer.py  shopping_agent.py  variant_generator.py
apps/api/tasteos_api/core/: auth.py  config.py  database.py  dependencies.py  quotas.py
apps/api/tasteos_api/models/: __init__.py  billing_event.py  grocery_item.py  household.py  household_invite.py  meal_plan.py  pantry_item.py  recipe.py  recipe_memory.py  recipe_nutrition.py  recipe_nutrition_info.py  subscription.py  usage.py  user.py  user_nutrition_profile.py  variant.py  variant_usage.py
apps/api/tasteos_api/routers/: __init__.py  auth.py  billing.py  feedback.py  households.py  imports.py  memory.py  nutrition.py  pantry.py  planner.py  ready.py  recipes.py  shopping.py  variants.py
apps/api/tasteos_api/tests/: conftest.py  test_household_invite_flow.py  test_household_isolation.py  test_imports.py  test_memory.py  test_nutrition.py  test_nutrition_profile.py  test_nutrition_today.py  test_pantry.py  (+2 more)
apps/api/tests/: test_pantry.py  test_planner.py  test_shopping.py
(+322 files in other folders)
